--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Expense.</title>
     <meta name="theme-color" content="#174ed9">
     <link rel="icon" href="logo2.png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BM0ZDJCQKW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BM0ZDJCQKW');
+    </script>
     <style>
       #meet{
         text-decoration: none;
