--- a/dashboard2.html
+++ b/dashboard2.html
@@ -73,10 +73,10 @@
     </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light p-2 fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white p-2 fixed-top" style="box-shadow: 0px 5px 10px -5px rgb(199, 206, 211);">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="logo.png" alt="" width="100"  class="d-inline-block align-text-top">
+        <img src="logo.png" alt="" width="150"  class="d-inline-block align-text-top">
         </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -103,7 +103,7 @@
       <br>
       <br>
       <div align='right' style="margin: 20px;">
-        <button class="btn btn-primary m-3" style="display: none;" id="add2">Add new row</button>
+        <button class="btn btn-success m-3" style="display: none;" id="add2">Add new row</button>
       </div>
       <br>
       <br>
