--- a/informations.html
+++ b/informations.html
@@ -53,10 +53,10 @@
 </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light p-2 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white p-2 fixed-top" style="box-shadow: 0px 5px 10px -5px rgb(199, 206, 211);">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="logo.png" alt="" width="100"  class="d-inline-block align-text-top">
+            <img src="logo.png" alt="" width="150"  class="d-inline-block align-text-top">
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -92,7 +92,7 @@
           <div class="col-md-6 no-gutters">
               <form action="clientDashboard.html">
               <div class="leftside mt-2">
-                  <h1 style="color: rgb(0, 89, 255);"><strong>Expense</strong> instant access.</h1>
+                  <h1 style="color: #3c995b;"><strong>Expense</strong> instant access.</h1>
                   <br>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">First and Last name:</label>
@@ -133,8 +133,8 @@
                 <br>
                 <div align="right">
                     <button class="btn btn-success m-3" id="upload" type="button">Import Excel file</button>
-                    <a href="index.html"><button class="btn btn-outline-primary m-3" type="button">Return back</button></a>
-                    <button class="btn btn-primary m-3" id="start" type="submit">Start</button>
+                    <a href="index.html"><button class="btn btn-outline-success m-3" type="button">Return back</button></a>
+                    <button class="btn btn-success m-3" id="start" type="submit">Start</button>
                 </div>
             </form>
             </div>
