--- a/materialDashboard.html
+++ b/materialDashboard.html
@@ -43,7 +43,7 @@
     }
 
     tr:nth-child(even) {
-        background-color: #d8eeff;
+        background-color: #dbffd8;
     }
     a{
           text-decoration: none;
@@ -51,10 +51,10 @@
     </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light p-2 fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white p-2 fixed-top" style="box-shadow: 0px 5px 10px -5px rgb(199, 206, 211);">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="logo.png" alt="" width="100"  class="d-inline-block align-text-top">
+        <img src="logo.png" alt="" width="150"  class="d-inline-block align-text-top">
         </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -88,26 +88,26 @@
       <br>
       <br>
       <br>
-      <h1 style="color: rgb(0, 89, 255); margin: 20px;"><strong>Hello,</strong> <span id="name"></span></h1>
+      <h1 style="color: #3c995b; margin: 20px;"><strong>Hello,</strong> <span id="name"></span></h1>
       <br>
       <br>
       <nav class="nav nav-pills justify-content-center m-3">
-        <a class="nav-link" aria-current="page" href="clientDashboard.html">Client</a>
-        <a class="nav-link" href="supplierDashboard.html">Suppliers</a>
-        <a class="nav-link active" href="materialDashboard.html">Materials</a>
+        <a class="nav-link text-success" aria-current="page" href="clientDashboard.html">Client</a>
+        <a class="nav-link text-success" href="supplierDashboard.html">Suppliers</a>
+        <a class="nav-link active bg-success" href="materialDashboard.html">Materials</a>
       </nav>
       <br>
 
 <div align="center">
 <div id="page" align="left">
       <div align="right">
-        <button class="btn btn-primary" id="add">Add new row</button>
-        <button class="btn btn-primary m-2" style="display: none;" id="recreate">Recreate table</button><button class="btn btn-outline-primary m-2" style="display: none;" id="add2">Add new row</button>
+        <button class="btn btn-success m-2" style="display: inline-block;" id="add">Add new row</button><button class="btn btn-outline-success m-2" style="display: inline-block;" id="workontable" onclick="parse()">Work on table</button>
+        <button class="btn btn-success m-2" style="display: none;" id="recreate">Recreate table</button><button class="btn btn-outline-success m-2" style="display: none;" id="add2">Add new row</button>
       </div>
       <br>
       <br>
       <div id="informations">
-      <h3 style="color: rgb(0, 89, 255);"><span>Article code</span></h3>
+      <h3 style="color: black; font-weight: bold;"><span>Article code</span></h3>
       <br>
       <div id="articleCode" align="center">
         <div class="form-floating mb-3">
@@ -120,7 +120,7 @@
 
       <br>
       <br>
-      <h3 style="color: rgb(0, 89, 255);"><span>Category</span></h3>
+      <h3 style="color: black; font-weight: bold;"><span>Category</span></h3>
       <br>
       <div id="category" align="center">
         <div class="form-floating mb-3">
@@ -134,7 +134,7 @@
 
       <br>
       <br>
-      <h3 style="color: rgb(0, 89, 255);"><span>Subject Name</span></h3>
+      <h3 style="color: black; font-weight: bold;"><span>Subject Name</span></h3>
       <br>
       <div id="subjectName" align="center">
         <div class="form-floating mb-3 ">
@@ -149,7 +149,7 @@
 
       <br>
       <br>
-      <h3 style="color: rgb(0, 89, 255);"><span>Unit (Kg)</span></h3>
+      <h3 style="color: black; font-weight: bold;"><span>Unit (Kg)</span></h3>
       <br>
       <div id="unit" align="center">
         <div class="form-floating mb-3 ">
@@ -164,7 +164,7 @@
 
       <br>
       <br>
-      <h3 style="color: rgb(0, 89, 255); "><span>Single price</span></h3>
+      <h3 style="color: black; font-weight: bold;"><span>Single price</span></h3>
       <br>
       <div id="singlePrice" align="center">
         <div class="form-floating mb-3 ">
@@ -181,7 +181,7 @@
 
       <br>
       <br>
-      <h3 style="color: rgb(0, 89, 255); "><span>Entries</span></h3>
+      <h3 style="color: black; font-weight: bold; "><span>Entries</span></h3>
       <br>
       <div id="entries" align="center">
         <div class="form-floating mb-3">
@@ -199,7 +199,7 @@
 
       <br>
       <br>
-      <h3 style="color: rgb(0, 89, 255); "><span>Outputs</span></h3>
+      <h3 style="color: black; font-weight: bold;"><span>Outputs</span></h3>
       <br>
       <div id="outputs" align="center">
         <div class="form-floating mb-3 ">
@@ -215,7 +215,7 @@
       
       <br>
       <br>
-      <h3 style="color: rgb(0, 89, 255); "><span>Existing</span></h3>
+      <h3 style="color: black; font-weight: bold;"><span>Existing</span></h3>
       <br>
       <div id="existing" align="center">
         <div class="form-floating mb-3 ">
@@ -233,7 +233,7 @@
 
       <div align="right">
         <br>
-        <button class="btn btn-primary" id="parse">Parse</button>
+        <button class="btn btn-success" id="parse">Parse</button>
       </div>
 
 </div>
@@ -511,6 +511,7 @@
 
         document.getElementById("informations").style.display = "none";
         document.getElementById("add").style.display = "none";
+        document.getElementById("workontable").style.display = "none";
         document.getElementById("recreate").style.display = "inline-block";
         document.getElementById("add2").style.display = "inline-block";
         document.getElementById("install").style.display = "block";
@@ -550,13 +551,15 @@
           if(table){
             document.getElementById("informations").style.display = "none";
             document.getElementById("add").style.display = "none";
+            document.getElementById("workontable").style.display = "none";
             document.getElementById("tableEx").innerHTML = table;
             document.getElementById("recreate").style.display = "inline-block";
             document.getElementById("add2").style.display = "inline-block";
             document.getElementById("install").style.display = "block";
           } else{
             document.getElementById("informations").style.display = "block";
-            document.getElementById("add").style.display = "block";
+            document.getElementById("add").style.display = "inline-block";
+            document.getElementById("workontable").style.display = "inline-block";
             document.getElementById("recreate").style.display = "none";
             document.getElementById("add2").style.display = "none";
             document.getElementById("install").style.display = "none";
