--- a/index.html
+++ b/index.html
@@ -100,27 +100,27 @@
             <a href="informations.html" class="mar-1"><button class="btn btn-success" >Get started</button></a> &nbsp; <a href="dashboard2.html" class="mar-1" download ><button class="btn btn-outline-success">Import Excel file</button></a>
         </div>
       </div>
-      <div id="all" style="z-index: auto; margin: 100px;"  align="center">
+      <div id="all" style="z-index: auto; margin: 30px;"  align="center">
         <div class="d-inline-block" style="margin: 15px; padding: 35px;" align="center">
           <span class="material-symbols-outlined" style="color: #3c995b; font-size: 100px;">
             touch_app
           </span>
           <br>
-          <span style="font-size: 25px; ">100% <strong>responsive</strong></span><br><span style="color: gray; font-size: 15px;">cross mobile-platfoms</span>
+          <span style="font-size: 25px; ">Easy <strong>to use</strong></span><br><span style="color: gray; font-size: 15px;">Very simple and easy system.</span>
         </div>
         <div class="d-inline-block" style="margin: 15px; padding: 35px;" align="center">
           <span class="material-symbols-outlined" style="color: #3c995b; font-size: 100px;">
-            bolt
+            sell
           </span>
           <br>
-            <span style="font-size: 25px;  ">Speeds <strong>development</strong></span><br><span style="color: gray; font-size: 15px;">We always trying to make Cytocyber faster to use</span>
+            <span style="font-size: 25px;  ">100% <strong>free</strong></span><br><span style="color: gray; font-size: 15px;">Enjoy accounting your business for free !</span>
         </div>
         <div class="d-inline-block" style="transform: translateY(10%); margin: 15px; padding: 35px;" align="center">
           <span class="material-symbols-outlined" style="color: #3c995b; font-size: 100px;">
-            workspace_premium
+            link
           </span>
           <br>
-            <span style="font-size: 25px;  ">#1 in <strong>Morocco</strong></span><br><span style="color: gray; font-size: 15px;">The first CSS framework<br> in Morocco ever made</span>
+            <span style="font-size: 25px;  ">Linked to <strong>Excel</strong></span><br><span style="color: gray; font-size: 15px;">You can Download the table<br> and use it in Excel!</span>
         </div>
       </div>
   <br>
