--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <br>
       <br>
       <div style="" id="banner">
-        <h1 style="font-size: 45px; font-weight: normal !important; color: white;"><strong>Expense</strong>: Boost Accounting period within </h1>
+        <h1 style="font-size: 45px; font-weight: normal !important; color: white;"><strong>Expense</strong>: Boost Accounting period </h1>
         <br>
         <span  style="font-size: 15px; display: inline-block; color: rgb(189, 189, 189); width: 50%;" id="description" >Do you search for free and a fast way to account your small business ? You're in the right place ! Discover the process by clicking <strong>Get Started</strong> below .</span>
         <br>
