--- a/clientDashboard.html
+++ b/clientDashboard.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
     <title>Expense client dashboard</title>
     <link rel="icon" href="logo2.png">
-    <meta name="theme-color" content="#174ed9">
+    <meta name="theme-color" content="#44ac67">
     
     <style>
       body ,html{
