--- a/dashboard2.html
+++ b/dashboard2.html
@@ -9,7 +9,7 @@
     <title>Expense Excel dashboard</title>
     <script src="https://unpkg.com/read-excel-file@4.x/bundle/read-excel-file.min.js"></script>
     <link rel="icon" href="logo2.png">
-    <meta name="theme-color" content="#174ed9">
+    <meta name="theme-color" content="#44ac67">
     <style>
     .file-input {
         position: absolute;
