--- a/materialDashboard.html
+++ b/materialDashboard.html
@@ -193,7 +193,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" style="transform: translateY(-8%); margin-right: 10px; color:rgb(46, 80, 46)" width="20" height="20" fill="currentColor" class="bi bi-file-earmark-spreadsheet" viewBox="0 0 16 16">
               <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V9H3V2a1 1 0 0 1 1-1h5.5v2zM3 12v-2h2v2H3zm0 1h2v2H4a1 1 0 0 1-1-1v-1zm3 2v-2h3v2H6zm4 0v-2h3v1a1 1 0 0 1-1 1h-2zm3-3h-3v-2h3v2zm-7 0v-2h3v2H6z"/>
             </svg>
-            Import XCL file
+            Import XLSX file
           </a>
       </li>
       </div>
